--- a/style.css
+++ b/style.css
@@ -4,3 +4,33 @@
     /* font-family: 'Montserrat', sans-serif; */
     font-family: "Poppins", sans-serif;
 }
+
+.sh-nb a{
+    background-color: #5f6cb2;
+    color: white;
+    border-radius: 5px;
+}
+
+.sh-nb a:hover{
+    background-color: #3d478a;
+    color: white;
+    border-radius: 5px;
+}
+
+.sh-nb{
+    margin-right: 20px;
+    margin-left: 20px;
+}
+
+@media (max-width: 767px) {
+    .sh-nb{
+        margin-right: 0px;
+        margin-left: 0px;
+    }
+    
+    .sh-nb a{
+        margin-right: 0px;
+        margin-left: 0px;
+        padding-left: 20px;
+    }
+}
